--- a/package.json
+++ b/package.json
@@ -8,19 +8,31 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-"dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "vite": "^5.4.19",
-  "@vitejs/plugin-react": "^5.0.0"
-},
-"devDependencies": {
-  "@types/react": "^18.3.4",
-  "@types/react-dom": "^18.3.0",
-  "autoprefixer": "^10.4.19",
-  "postcss": "^8.4.38",
-  "tailwindcss": "^3.4.7"
-},
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@vitejs/plugin-react": "^5.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vite": "^5.4.19"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "shadcn-ui": "^0.9.5",
+    "tailwindcss": "^3.4.7"
+  },
   "engines": {
     "node": ">=18"
   }
